--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=WeekFiveTeamProject
+spring.datasource.url = jdbc:/mysql://localhost:3306/library
+spring.datasource.username=root
+spring.datasource.password=
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
